# kartecli-front

./: Cargo.toml
src/: data_fetching.rs  data_validation.rs  lib.rs  main.rs  rendering.rs
src/rendering/: copyright.rs  home_page.rs  login.rs  menu.rs  order_tickets.rs  popup.rs  register.rs  show_tickets.rs
