[package]
name = "svetsko-prvenstvo-front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
tui = { version = "0.19", default-features = false, features = ['crossterm', 'serde'] }
serde = {version = "1.0", features = ["derive"] }
tui-textarea = "0.2.0"
serde_json = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
